test/classes/errors/nilability-init-var/init-var-nonnil-owned-from-oknil-borrowed.chpl
//  lhs: owned!  rhs: borrowed?  errors: nlb, mm

class MyClass {
  var x: int;
}

var rhs: borrowed MyClass?;

var lhs: owned MyClass = rhs;

compilerError("done");
